# fastapi-traefik-deploy-example

./: .gitignore  Makefile  README.md  docker-compose-dev.yaml  docker-compose.ssl.override.yaml  docker-compose.traefik.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
docker/: Dockerfile.app  Dockerfile.base
docker/backend/: Dockerfile.app  entrypoint.sh
docker/nginx/: nginx.conf.template
docker/postgres-init/: create-dbs.sh
src/: makemigrations.py
src/migrations/: env.py
src/migrations/versions/: 1d650b56ef31_users_tasks.py  c7c3d7dcc5a3_api_token.py  e5715d5eaee8_users.py
src/task_manager/: config.py  ioc.py  main.py
src/task_manager/adapters/postgres/: __init__.py  base.py  connection.py
src/task_manager/application/: exceptions.py
src/task_manager/application/common/: __init__.py  encryption.py  transaction.py
src/task_manager/application/gateways/: __init__.py  realm.py  task.py  user.py
src/task_manager/application/interactors/: realm_add.py  realm_delete.py  realm_get.py  realm_own_list.py  realm_update.py  task_add.py  user_login.py  user_register.py
src/task_manager/bootstrap/: config.py  main.py
src/task_manager/bootstrap/cli/: makemigraions.py  migrate.py
src/task_manager/bootstrap/di/: ioc.py
src/task_manager/domain/exceptions/: realm.py  user.py
src/task_manager/ioc/: __init__.py  ioc.py
tests/application/: test_realm_create.py  test_realm_delete.py  test_realm_get.py  test_realm_own_list.py  test_realm_update.py  test_user_login.py  test_user_register.py
tests/domain/: test_realm.py  test_user.py
(+49 files in other folders)
